Change label to be span instead of legend -> fixes safari bug with placement of icon aligned with text

--- a/src/less/components/forms/checkbox.less
+++ b/src/less/components/forms/checkbox.less
@@ -115,13 +115,13 @@
 
 fieldset {
     &.checkbox-group {
-        legend {
-            margin-bottom: 0;
-            border: none;
-            font-weight: bold;
 
-            span {
-                font-weight: normal;
+        span {
+            font-weight: normal;
+
+
+            .legend-title {
+                font-weight: bold;
             }
         }
     }
